fixed problems with margins and small readability changes

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,4 +1,11 @@
 .classBlock {
     position: relative;
     background-color: blue;
+    margin: 0;
+    padding: 0;
+}
+
+.classBlock p {
+    margin: 0;
+    padding: 0;
 }
